k8s/service.yaml
# Service yml file configuration
apiVersion: v1
kind: Service
metadata:
  name: sftp-background-service
spec:
  selector:
    app: sftp-background-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
