k8s/ingress.yaml
# Ingress yml file configuration
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gke-tutorial-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gke-tutorial-ip"
spec:
  backend:
    serviceName: sftp-background-service
    servicePort: 3000
